Fix #125466: Asset shelf crash when reverting a file

The `region_on_poll_success()` function wasn't called before
the region initializing function, so the asset shelf region data wasn't
set up as expected.

A proper fix was committed to main with 7fcd4e2429, this is a 4.2
specific workaround that is more minimal and safe.

Pull Request: https://projects.blender.org/blender/blender/pulls/125817